more bug squishing

--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -3,7 +3,7 @@
     background-image: linear-gradient(to right, rgb(147, 102, 193), rgb(83, 72, 228));
     border-top: 2px solid rgb(228, 228, 206);
     padding-bottom: 2rem;
-    position: fixed;
+    position: relative;
     width: 100%;
     bottom: 0;
 
