--- a/src/pages/Community/community.scss
+++ b/src/pages/Community/community.scss
@@ -2,9 +2,13 @@
 
     margin: 8rem 2rem 0 2rem;
 
+    &__welcome{
+        margin: 0 !important;
+    }
+
     &__header {
         text-align: center;
-        margin-bottom: 10rem;
+        margin-bottom: 8rem;
     }
 
     &__title {
@@ -18,7 +22,7 @@
     &__post-heading {
         text-align: center;
         font-size: 1.25rem;
-        // position: relative;
+        position: relative;
         right: 2rem;
     }
 
@@ -72,8 +76,7 @@
     &__form {
         display: flex;
         flex-direction: column;
-        margin-top: 2rem;
-        margin-right: 4rem;
+        margin: 2rem 4rem 5rem 0;
         width: 40%;
     }
 
