--- a/src/pages/Login/login.scss
+++ b/src/pages/Login/login.scss
@@ -1,6 +1,8 @@
 .login {
 
+    
     &__container {
+        height: 63vh;
         margin: 0 2rem;
     }
 
